Validated html and css
fixed errors that were found in html validator

--- a/checkoutV2.html
+++ b/checkoutV2.html
@@ -19,7 +19,7 @@
 
   <div class="payment">
     <a class="text-link" href=listings.html>
-    < Back to shopping
+    &lt; Back to shopping
     </a>
     <h1 class="heading"> Checkout </h1>
     <div class="part1">
@@ -32,7 +32,7 @@
   <input class="cartText" type="text" id="email" placeholder="example@me.com"> <br>
 
   <label for="adr"> Address </label> <br>
-  <input class="cartText"type="text" id="adr" placeholder="3098 Roycroft Court"> <br>
+  <input class="cartText" type="text" id="adr" placeholder="3098 Roycroft Court"> <br>
 
 <div class="areaCode">
   <div class="half1">
@@ -55,7 +55,7 @@
 <input class="cartText" type="text" id="cardname" placeholder="Brianna Quan"> <br>
 
 <label for="cardnum"> Card Number </label> <br>
-<input class="cartText"type="text" id="cardnum" placeholder="1234566789"> <br>
+<input class="cartText" type="text" id="cardnum" placeholder="1234566789"> <br>
 
 <div class="areaCode">
 
