--- a/listings.html
+++ b/listings.html
@@ -17,10 +17,9 @@
     <h1 class="logo">sweetener</h1>
   </a>
 
-<a href="checkoutV2.html">
+<form action="checkoutV2.html">
     <button class="cart-icon"> 2 </button>
-</a>
-</div>
+</form>
 
 </header>
 
