--- a/product.html
+++ b/product.html
@@ -20,9 +20,9 @@
       <h1 class="logo">sweetener</h1>
 </a>
 
-<a href="checkoutV2.html">
-      <button class="cart-icon" href="checkoutV2.html"> 2 </button>
-</a>
+<form action="checkoutV2.html">
+      <button class="cart-icon"> 2 </button>
+</form>
 </header>
 
 <div class="navigation">
@@ -74,7 +74,7 @@ Acai berry — Antioxidant powerhouse. Protects skin from environmental stress a
 
   <section id = "relatedsection" >
     <div>
-    <h1 id="relatedheader">related products</h1>
+    <h2 id="relatedheader">related products</h2>
   </div>
   <div class="listing">
   <div class="cards">
