--- a/product2.html
+++ b/product2.html
@@ -17,11 +17,11 @@
     <a href="index.html">
     <h1 class="logo">sweetener</h1>
 </a>
-<a href="checkoutV2.html">
+<form action="checkoutV2.html">
     <button class="cart-icon"> 2 </button>
-</a>
+</form>
 
-</div>
+
 </header>
 
     <div class="navigation">
@@ -73,7 +73,7 @@ Meadowfoam seed oil — Naturally helps skin form a barrier to lock in moisture 
 
   <section id = "relatedsection" >
     <div>
-    <h1 id="relatedheader">related products</h1>
+    <h2 id="relatedheader">related products</h2>
   </div>
   <div class="listing">
   <div class="cards">
@@ -106,7 +106,7 @@ Meadowfoam seed oil — Naturally helps skin form a barrier to lock in moisture 
   <p class="price">$55.00</p>
   </div>
 </div>
-</div>
+
   </section>
 
 
