--- a/home.html
+++ b/home.html
@@ -16,14 +16,15 @@
     <img class="search-icon" src="img/search.svg" alt="search icon">
     <h1 class="logo">sweetener</h1>
 
+<form action="checkoutV2.html">
     <button class="cart-icon"> 2 </button>
-
+</form>
 
 </header>
 
     <div class="navigation">
           <nav>
-            <a href="index.html">New</a>
+            <a href="home.html">New</a>
             <a href="listings.html">Shop all</a>
             <a href="#about_company">Brands</a>
             <a href="#about_company">Quizzes</a>
