--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a href="#text_elements">Text Elements</a>
         <a href="#combined_elements">Combined Elements</a>
         <a href="#about_company">About Company</a>
-        <a href="listings.html"> Website </a>
+        <a href="home.html"> Website </a>
 
       </nav>
     </div>
