--- a/product.html
+++ b/product.html
@@ -27,11 +27,11 @@
 
 <div class="navigation">
       <nav>
-        <a href="index.html">New</a>
+        <a href="home.html">New</a>
         <a href="listings.html">Shop all</a>
-        <a href="#about_company">Brands</a>
-        <a href="#about_company">Quizzes</a>
-        <a href="#about_us"> About us </a>
+        <a href="index.html">Brands</a>
+        <a href="index.html">Quizzes</a>
+        <a href="index.html"> About us </a>
       </nav>
     </div>
 
