--- a/listings.html
+++ b/listings.html
@@ -25,7 +25,7 @@
 
     <div class="navigation">
           <nav>
-            <a href="index.html">New</a>
+            <a href="home.html">New</a>
             <a href="listings.html">Shop all</a>
             <a href="#about_company">Brands</a>
             <a href="#about_company">Quizzes</a>
