Added new releases to home.html

--- a/home.html
+++ b/home.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8">
   <title>IAT 339 Style Guide</title>
   <!-- <link href="css/main.css" rel="stylesheet"> -->
+      <link href="css/main.css" rel="stylesheet">
+    <link href="css/listing.css" rel"stylesheet">
     <link href="css/fonts.css" rel="stylesheet">
     <link href="css/home.css" rel="stylesheet">
     <link href="css/nav.css" rel="stylesheet">
@@ -35,8 +37,45 @@
   <section id="homebackground">
     <div id="textandimg">
         <img id="homeimage" src="img/homepagebackground.jpg" alt="homebackground">
-        <h2 id="hometext">shop now</h2>
+        <a href = "listings.html" h2 id="hometext">shop now</h2>
       </div>
+        </section>
+
+  <section id="newrelease">
+    <div id="newreleasesection">
+
+    <div class="listing">
+    <div class="cards">
+      <a href="product.html">
+        <div class = "imagelisting klairs">
+    <!-- <img class="imagehover" src="img/klairs1.jpeg" alt="Asset3" style="width:100%"> -->
+    </div>
+    </a>
+    <h4>(NEW) Klairs — Midnight Blue Calming Cream</h4>
+    <p class="price">$35.00</p>
+    </div>
+
+    <div class="cards">
+      <a href="product.html">
+        <div class = "imagelisting moisturizer">
+    <!-- <img class="imagehover" src="img/moisturizer1.jpg" alt="Asset4" style="width:100%"> -->
+    </div>
+    </a>
+    <h4>(NEW) Krave — Oat So Simple Water Cream</h4>
+    <p class="price">$30.00</p>
+    </div>
+
+    <div class="cards">
+      <a href="product.html">
+        <div class = "imagelisting sunscreen">
+    <!-- <img class="imagehover" src="img/sunscreen1.jpg" alt="Asset5" style="width:100%"> -->
+    </div>
+    </a>
+    <h4>(NEW) Sioris — You Are My Shining Sunscreen</h4>
+    <p class="price">$55.00</p>
+  </div>
+    </div>
+  </div>
   </section>
 
 
