Separated about and contact
created contact.html
fixed responsiveness in about, contact and home page

--- a/about.html
+++ b/about.html
@@ -32,32 +32,16 @@
 
 <div class="about">
 
-<div>
-  <img class="checkout_img" src="img/klairs2.png" alt="3-1">
+<div class="about-img-container">
+  <img class="about-img" src="img/klairs2.png" alt="3-1">
 </div>
-<div>
+<div class="about-info">
 <h1> Hi! Welcome to Sweetener </h1>
-        <p><em>What does the company do, or offer?</em><br>
+        <p class="about-descr"><em>What does the company do, or offer?</em><br>
         Sweetener is a skincare product retailer which will allow users to purchase different skincare products from different brands on one site.  The website will target a younger audience, such as young adults in their early 20s. The company will become a reliable source of transparent information for skincare advice. This means that the website will clearly state which products would be appropriate or inappropriate for specific skin types instead of promoting and trying to sell everything. Ultimately, this builds trust between the customer and company.Why might this company entice someone to purchase a product or service?
         Through personal filters, customers will be able to easily figure out which products would be suitable for them. For example, a customer can filter products by skin concern such as "acne", "dark spots", or "dry skin".</p>
 
-        <div class="part1">
-        <h3 class="check-heading"> Contact Us! </h3>
 
-      <label for="fullname"> Full Name </label> <br>
-      <input class="cartText" type="text" id="fullname" placeholder="Name"> <br>
-
-      <label for="email"> Email </label> <br>
-      <input class="cartText" type="text" id="email" placeholder="example@me.com"> <br>
-
-      <label for="form-review"> Review </label> <br>
-      <textarea id="form-review" placeholder="Write you review here"> </textarea>
-      
-      <button >submit</button>
-
-
-
-</div>
 </div>
 </body>
 </html>
