--- a/home.html
+++ b/home.html
@@ -26,23 +26,30 @@
 
     <div class="navigation">
           <nav>
-            <a href="home.html">New</a>
+            <a href="home.html">Home</a>
+            <a href="#about_company">News</a>
             <a href="listings.html">Shop all</a>
-            <a href="#about_company">Brands</a>
-            <a href="#about_company">Quizzes</a>
+
             <a href="about.html"> About us </a>
+            <a href="#about_company">Contact</a>
           </nav>
         </div>
 
-  <section id="homebackground">
-    <div id="textandimg">
-        <img id="homeimage" src="img/homepagebackground.jpg" alt="homebackground">
-        <a href = "listings.html" h2 id="hometext">shop now</h2>
+  <section class="homebackground">
+    <div class="textandimg">
+        <img class="homeimage" src="img/landingimg.jpg" alt="homebackground">
+        <!-- <a href = "listings.html" h2 id="hometext">shop now</h2> -->
+        <div class=landing-text>
+        <h1 class=> New released must-haves! </h1>
+        <button class="shop-now"> SHOP NOW </button>
+      </div>
       </div>
         </section>
 
   <section id="newrelease">
+    <h1 class="new-release"> New Releases <h1>
     <div id="newreleasesection">
+
 
     <div class="listing">
     <div class="cards">
