--- a/about.html
+++ b/about.html
@@ -22,11 +22,12 @@
 
     <div class="navigation">
           <nav>
-            <a href="index.html">New</a>
+            <a href="home.html">Home</a>
+            <a href="events.html">News</a>
             <a href="listings.html">Shop all</a>
-            <a href="#about_company">Brands</a>
-            <a href="#about_company">Quizzes</a>
-            <a href="#about_us"> About us </a>
+
+            <a href="about.html"> About us </a>
+            <a href="contact.html">Contact</a>
           </nav>
         </div>
 
