--- a/article.html
+++ b/article.html
@@ -27,11 +27,11 @@
 
     <div class="navigation">
           <nav>
-            <a href="home.html">New</a>
+            <a href="home.html">Home</a>
+            <a href="events.html">News</a>
             <a href="listings.html">Shop all</a>
-            <a href="#about_company">Brands</a>
-            <a href="#about_company">Quizzes</a>
-            <a href="#about_us"> About us </a>
+            <a href="about.html"> About us </a>
+            <a href="contact.html">Contact</a>
           </nav>
         </div>
 
