--- a/contact.html
+++ b/contact.html
@@ -21,11 +21,12 @@
 
     <div class="navigation">
           <nav>
-            <link href="css/main.css" rel="stylesheet">
-          <link href="css/listing.css" rel"stylesheet">
-          <link href="css/fonts.css" rel="stylesheet">
-          <link href="css/home.css" rel="stylesheet">
-          <link href="css/nav.css" rel="stylesheet">
+            <a href="home.html">Home</a>
+            <a href="events.html">News</a>
+            <a href="listings.html">Shop all</a>
+
+            <a href="about.html"> About us </a>
+            <a href="contact.html">Contact</a>
           </nav>
         </div>
 
