--- a/home.html
+++ b/home.html
@@ -27,11 +27,11 @@
     <div class="navigation">
           <nav>
             <a href="home.html">Home</a>
-            <a href="#about_company">News</a>
+            <a href="events.html">News</a>
             <a href="listings.html">Shop all</a>
 
             <a href="about.html"> About us </a>
-            <a href="#about_company">Contact</a>
+            <a href="contact.html">Contact</a>
           </nav>
         </div>
 
