--- a/product.html
+++ b/product.html
@@ -27,11 +27,12 @@
 
 <div class="navigation">
       <nav>
-        <a href="home.html">New</a>
+        <a href="home.html">Home</a>
+        <a href="events.html">News</a>
         <a href="listings.html">Shop all</a>
-        <a href="index.html">Brands</a>
-        <a href="index.html">Quizzes</a>
-        <a href="index.html"> About us </a>
+
+        <a href="about.html"> About us </a>
+        <a href="contact.html">Contact</a>
       </nav>
     </div>
 
