Linked events.html to article.html

--- a/events.html
+++ b/events.html
@@ -37,35 +37,45 @@
 
 <div id="onlylargearticles">
   <div class = "largearticle">
+    <a href="article.html">
     <img class="largearticleimg" src="img/glossierbanner.jpg" alt="glossierbanner">
     <h1 id = "largearticleheader">release</h1>
     <h2 id = "largearticletitle">Glossier newly added!</h2>
+  </a>
     </div>
 
     <div class = "largearticle">
+      <a href="article.html">
       <img class="largearticleimg" src="img/minimalistbanner.png" alt="minimalistbanner">
       <h1 id = "largearticleheader">release</h1>
       <h2 id = "largearticletitle">Reset your skincare routine with this.</h2>
+</a>
       </div>
 </div>
 
 <div id = "onlysmallarticles">
       <div class="smallarticle">
-        <img class="smallarticleimg" src="img/plasticbottles.jpg" alt="glossierbanner">
+        <a href="article.html">
+        <img class="smallarticleimg" src="img/plasticbottles.jpg" alt="plasticbottles">
         <h1 id = "smallarticleheader">article</h1>
         <h2 id = "smallarticletitle">How much of your packaging is actually recyclable?</h2>
+</a>
         </div>
 
         <div class="smallarticle">
-          <img class="smallarticleimg" src="img/washingskin.png" alt="glossierbanner">
+          <a href="article.html">
+          <img class="smallarticleimg" src="img/washingskin.png" alt="washingskin">
           <h1 id = "smallarticleheader">advice</h1>
           <h2 id = "smallarticletitle">Finding the right cleanser for you.</h2>
+</a>
           </div>
 
           <div class="smallarticle">
-            <img class="smallarticleimg" src="img/makeup.jpg" alt="glossierbanner">
+            <a href="article.html">
+            <img class="smallarticleimg" src="img/makeup.jpg" alt="makeup">
             <h1 id = "smallarticleheader">advice</h1>
             <h2 id = "smallarticletitle">Can makeup clog your pores?</h2>
+</a>
             </div>
 </div>
 
