--- a/about.html
+++ b/about.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>IAT 339 Style Guide</title>
-  <!-- <link href="css/main.css" rel="stylesheet"> -->
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/fonts.css" rel="stylesheet">
     <link href="css/nav.css" rel="stylesheet">
         <link href="css/main.css" rel="stylesheet">
