--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>IAT 339 Style Guide</title>
   <!-- <link href="css/main.css" rel="stylesheet"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
       <link href="css/main.css" rel="stylesheet">
     <link href="css/listing.css" rel"stylesheet">
     <link href="css/fonts.css" rel="stylesheet">
