--- a/listings.html
+++ b/listings.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>IAT 339 Style Guide</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
     <link href="css/fonts.css" rel="stylesheet">
     <link href="css/nav.css" rel="stylesheet">
