--- a/product2.html
+++ b/product2.html
@@ -9,6 +9,7 @@
     <link href="css/fonts.css" rel="stylesheet">
     <link href="css/nav.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
+    <link href="css/review.css" rel="stylesheet">
 </head>
 
 <body>
@@ -72,6 +73,18 @@ Meadowfoam seed oil — Naturally helps skin form a barrier to lock in moisture 
   </div>
   </div>
 
+  <section id = "mainreviewsection">
+    <div id="reviewtitle">
+    <h2>Write a Review</h2>
+    <form>
+<label for="name">Name:</label><br>
+<input type="text" id="name" name="name"><br>
+<label for="name">Review:</label><br>
+<input type="text" id="review" name="review"><br>
+</form>
+<button class="shop-now">Submit</button>
+  </div>
+  </section>
 
   <section id = "relatedsection" >
     <div>
