Added footer to all pages

--- a/about.html
+++ b/about.html
@@ -63,7 +63,8 @@
 
   <a href="about.html"><li> About Us </li> </a>
   <a href="citations.html"> <li> Citations </li> </a>
-  <a href="styleguide.html"><li> Styleguide </li> <a>
+  <a href="styleguide.html"><li> Styleguide </li> </a>
+      <a href="https://github.com/justinyang212/project2"><li> GitHub </li> </a>
 
 </ul>
 
