--- a/citations.html
+++ b/citations.html
@@ -1,5 +1,18 @@
-<h1>Citations</h1>
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+  <meta charset="utf-8">
+  <title>Citations</title>
+  <link href="css/main.css" rel="stylesheet">
+    <link href="css/fonts.css" rel="stylesheet">
+</head>
+
+<header>
+<h1>Citations</h1>
+</header>
+
+<body>
 <h2>Images</h2>
 <p>https://megpods.blogspot.com/2019/04/review-jolse-sioris-time-is-running-out.html</p>
 <p>https://www.glossier.com/products/futuredew</p>
@@ -16,3 +29,5 @@
 <h2>Code used</h2>
 <p>https://css-tricks.com/snippets/css/complete-guide-grid/</p>
 <p>https://www.w3schools.com/howto/howto_css_checkout_form.asp</p>
+</body>
+</html>
