--- a/checkoutV2.html
+++ b/checkoutV2.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <meta charset="utf-8">
   <title>IAT 339 Style Guide</title>
   <link href="css/checkoutv2.css" rel="stylesheet">
