--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,8 @@
 <html lang="en">
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  
   <meta charset="utf-8">
   <title>IAT 339 Style Guide</title>
   <!-- <link href="css/main.css" rel="stylesheet"> -->
