Added link to checkout cart

--- a/nav.html
+++ b/nav.html
@@ -15,7 +15,9 @@
     <img class="search-icon" src="img/search.svg" alt="search icon">
     <h1 class="logo">sweetener</h1>
 
-    <button class="cart-icon"> 2 </button>
+    <form action="checkoutV2.html">
+        <button class="cart-icon"> 2 </button>
+    </form>
 
 </div>
 </header>
