--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  
+
   <meta charset="utf-8">
   <title>IAT 339 Style Guide</title>
   <!-- <link href="css/main.css" rel="stylesheet"> -->
@@ -17,7 +17,9 @@
     <img class="search-icon" src="img/search.svg" alt="search icon">
     <h1 class="logo">sweetener</h1>
 
-    <button class="cart-icon"> 2 </button>
+    <form action="checkoutV2.html">
+        <button class="cart-icon"> 2 </button>
+    </form>
 
 </header>
 
