--- a/events.html
+++ b/events.html
@@ -40,16 +40,16 @@
   <div class = "largearticle">
     <a href="article.html">
     <img class="largearticleimg" src="img/glossierbanner.jpg" alt="glossierbanner">
-    <h1 id = "largearticleheader">release</h1>
-    <h2 id = "largearticletitle">Glossier newly added!</h2>
+    <h1 class = "largearticleheader">release</h1>
+    <h2 class = "largearticletitle">Glossier newly added!</h2>
   </a>
     </div>
 
     <div class = "largearticle">
       <a href="article.html">
       <img class="largearticleimg" src="img/minimalistbanner.png" alt="minimalistbanner">
-      <h1 id = "largearticleheader">release</h1>
-      <h2 id = "largearticletitle">Reset your skincare routine with this.</h2>
+      <h1 class = "largearticleheader">release</h1>
+      <h2 class = "largearticletitle">Reset your skincare routine with this.</h2>
 </a>
       </div>
 </div>
@@ -58,24 +58,24 @@
       <div class="smallarticle">
         <a href="article.html">
         <img class="smallarticleimg" src="img/plasticbottles.jpg" alt="plasticbottles">
-        <h1 id = "smallarticleheader">article</h1>
-        <h2 id = "smallarticletitle">How much of your packaging is actually recyclable?</h2>
+        <h1 class = "smallarticleheader">article</h1>
+        <h2 class = "smallarticletitle">How much of your packaging is actually recyclable?</h2>
 </a>
         </div>
 
         <div class="smallarticle">
           <a href="article.html">
           <img class="smallarticleimg" src="img/washingskin.png" alt="washingskin">
-          <h1 id = "smallarticleheader">advice</h1>
-          <h2 id = "smallarticletitle">Finding the right cleanser for you.</h2>
+          <h1 class = "smallarticleheader">advice</h1>
+          <h2 class = "smallarticletitle">Finding the right cleanser for you.</h2>
 </a>
           </div>
 
           <div class="smallarticle">
             <a href="article.html">
             <img class="smallarticleimg" src="img/makeup.jpg" alt="makeup">
-            <h1 id = "smallarticleheader">advice</h1>
-            <h2 id = "smallarticletitle">Can makeup clog your pores?</h2>
+            <h1 class = "smallarticleheader">advice</h1>
+            <h2 class = "smallarticletitle">Can makeup clog your pores?</h2>
 </a>
             </div>
 </div>
@@ -92,11 +92,10 @@
 
 <ul>
 
-  <a href="about.html"><li> About Us </li> </a>
-  <a href="citations.html"> <li> Citations </li> </a>
-  <a href="styleguide.html"><li> Styleguide </li> </a>
-    <a href="https://github.com/justinyang212/project2"><li> GitHub </li> </a>
-
+  <li>  <a href="about.html"> About Us </a> </li>
+  <li>  <a href="citations.html">  Citations </a></li>
+  <li>  <a href="styleguide.html">Styleguide  </a></li>
+      <li>  <a href="https://github.com/justinyang212/project2"> GitHub </a></li>
 </ul>
 
 </div>
@@ -109,7 +108,7 @@
 <p> <b> phone </b> </p>
 </div>
 
-<div class="support1" </div>
+<div class="support1"> </div>
 <p> support@sweetener.com </p>
 <p> (604)-684-3730 </p>
 </div>
