--- a/home.html
+++ b/home.html
@@ -6,8 +6,8 @@
   <title>IAT 339 Style Guide</title>
   <!-- <link href="css/main.css" rel="stylesheet"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link href="css/main.css" rel="stylesheet">
-    <link href="css/listing.css" rel"stylesheet">
+    <link href="css/main.css" rel="stylesheet">
+    <link href="css/listing.css" rel="stylesheet">
     <link href="css/fonts.css" rel="stylesheet">
     <link href="css/home.css" rel="stylesheet">
     <link href="css/nav.css" rel="stylesheet">
@@ -40,8 +40,8 @@
     <div class="textandimg">
         <img class="homeimage" src="img/landingimg.jpg" alt="homebackground">
         <!-- <a href = "listings.html" h2 id="hometext">shop now</h2> -->
-        <div class=landing-text>
-        <h1 class=> New released must-haves! </h1>
+        <div class="landing-text">
+        <h2> New released must-haves! </h2>
         <form action="listings.html">
         <button class="shop-now"> SHOP NOW </button>
       </form>
@@ -50,7 +50,7 @@
         </section>
 
   <section id="newrelease">
-    <h1 class="new-release"> New Releases <h1>
+    <h2 class="new-release"> New Releases </h2>
     <div id="newreleasesection">
 
 
@@ -100,11 +100,10 @@
 
   <ul>
 
-    <a href="about.html"><li> About Us </li> </a>
-    <a href="citations.html"> <li> Citations </li> </a>
-    <a href="styleguide.html"><li> Styleguide </li> </a>
-      <a href="https://github.com/justinyang212/project2"><li> GitHub </li> </a>
-
+    <li>  <a href="about.html"> About Us </a> </li>
+    <li>  <a href="citations.html">  Citations </a></li>
+    <li>  <a href="styleguide.html">Styleguide  </a></li>
+        <li>  <a href="https://github.com/justinyang212/project2"> GitHub </a></li>
   </ul>
 
   </div>
@@ -117,7 +116,7 @@
   <p> <b> phone </b> </p>
   </div>
 
-  <div class="support1" </div>
+  <div class="support1"> </div>
   <p> support@sweetener.com </p>
   <p> (604)-684-3730 </p>
   </div>
