--- a/product2.html
+++ b/product2.html
@@ -82,7 +82,7 @@ Meadowfoam seed oil — Naturally helps skin form a barrier to lock in moisture 
 <label for="name">Review:</label><br>
 <input type="text" id="review" name="review"><br>
 </form>
-<button class="shop-now">Submit</button>
+<button> class="shop-now">Submit</button>
   </div>
   </section>
 
@@ -136,11 +136,10 @@ Meadowfoam seed oil — Naturally helps skin form a barrier to lock in moisture 
 
   <ul>
 
-    <a href="about.html"><li> About Us </li> </a>
-    <a href="citations.html"> <li> Citations </li> </a>
-    <a href="styleguide.html"><li> Styleguide </li> </a>
-    <a href="https://github.com/justinyang212/project2"><li> GitHub </li> </a>
-
+    <li>  <a href="about.html"> About Us </a> </li>
+    <li>  <a href="citations.html">  Citations </a></li>
+    <li>  <a href="styleguide.html">Styleguide  </a></li>
+        <li>  <a href="https://github.com/justinyang212/project2"> GitHub </a></li>
 
 
   </ul>
@@ -155,7 +154,7 @@ Meadowfoam seed oil — Naturally helps skin form a barrier to lock in moisture 
   <p> <b> phone </b> </p>
   </div>
 
-  <div class="support1" </div>
+  <div class="support1"> </div>
   <p> support@sweetener.com </p>
   <p> (604)-684-3730 </p>
   </div>
