--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -72,11 +73,10 @@
 
 <ul>
 
-  <a href="about.html"><li> About Us </li> </a>
-  <a href="citations.html"> <li> Citations </li> </a>
-  <a href="styleguide.html"><li> Styleguide </li> </a>
-    <a href="https://github.com/justinyang212/project2"><li> GitHub </li> </a>
-
+  <li>  <a href="about.html"> About Us </a> </li>
+  <li>  <a href="citations.html">  Citations </a></li>
+  <li>  <a href="styleguide.html">Styleguide  </a></li>
+      <li>  <a href="https://github.com/justinyang212/project2"> GitHub </a></li>
 </ul>
 
 </div>
@@ -89,7 +89,7 @@
 <p> <b> phone </b> </p>
 </div>
 
-<div class="support1" </div>
+<div class="support1"> </div>
 <p> support@sweetener.com </p>
 <p> (604)-684-3730 </p>
 </div>
