Nav bar responsive
fixed nav bar responsive

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>IAT 339 Style Guide</title>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/fonts.css" rel="stylesheet">
     <link href="css/nav.css" rel="stylesheet">
         <link href="css/main.css" rel="stylesheet">
@@ -17,9 +17,7 @@
     <img class="search-icon" src="img/search.svg" alt="search icon">
     <h1 class="logo">sweetener</h1>
 
-    <form action="checkoutV2.html">
-        <button class="cart-icon"> 2 </button>
-    </form>
+    <button class="cart-icon"> 2 </button>
 
 </header>
 
@@ -65,8 +63,7 @@
 
   <a href="about.html"><li> About Us </li> </a>
   <a href="citations.html"> <li> Citations </li> </a>
-  <a href="styleguide.html"><li> Styleguide </li> </a>
-      <a href="https://github.com/justinyang212/project2"><li> GitHub </li> </a>
+  <a href="styleguide.html"><li> Styleguide </li> <a>
 
 </ul>
 
