--- a/checkout.html
+++ b/checkout.html
@@ -2,8 +2,10 @@
 <html lang="en">
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
   <title>IAT 339 Style Guide</title>
+
   <link href="css/checkout.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
     <link href="css/fonts.css" rel="stylesheet">
@@ -179,43 +181,6 @@
 </div>
 </form>
 
-
-<footer>
-<div class="footer-row">
-<div class="column1">
-<h1> sweetener </h1>
-<p class="copyright"> © 2020 sweetener. All rights reserved. </p>
-</div>
-
-<div class="column2">
-  <h3> More </h3>
-
-<ul>
-
-  <a href="about.html"><li> About Us </li> </a>
-  <a href="citations.html"> <li> Citations </li> </a>
-  <a href="styleguide.html"><li> Styleguide </li> </a>
-    <a href="https://github.com/justinyang212/project2"><li> GitHub </li> </a>
-
-</ul>
-
-</div>
-
-<div class="column3">
-<h3> Contact Us </h3>
-<div class="support">
-<div class="support1">
-<p><b> email </b> </p>
-<p> <b> phone </b> </p>
-</div>
-
-<div class="support1" </div>
-<p> support@sweetener.com </p>
-<p> (604)-684-3730 </p>
-</div>
-</div>
-</div>
-</footer>
 
 </body>
 
