--- a/nav.html
+++ b/nav.html
@@ -5,8 +5,11 @@
   <meta charset="utf-8">
   <title>IAT 339 Style Guide</title>
   <!-- <link href="css/main.css" rel="stylesheet"> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="css/fonts.css" rel="stylesheet">
     <link href="css/nav.css" rel="stylesheet">
+    <link href ="css/main.css" rel="stylesheet">
 </head>
 
 <body>
@@ -15,59 +18,35 @@
     <img class="search-icon" src="img/search.svg" alt="search icon">
     <h1 class="logo">sweetener</h1>
 
-    <form action="checkoutV2.html">
-        <button class="cart-icon"> 2 </button>
-    </form>
+    <button class="cart-icon"> 2 </button>
 
-</div>
+
 </header>
 
-    <div class="navigation">
-          <nav>
+    <div class="navigation" id="myNav">
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <i class="fa fa-bars"></i>
+      </a>
             <a href="index.html">New</a>
             <a href="listings.html">Shop all</a>
             <a href="#about_company">Brands</a>
             <a href="#about_company">Quizzes</a>
             <a href="#about_us"> About us </a>
-          </nav>
-        </div>
-
-
-        <footer>
-        <div class="footer-row">
-        <div class="column1">
-        <h1> sweetener </h1>
-        <p class="copyright"> © 2020 sweetener. All rights reserved. </p>
-        </div>
-
-        <div class="column2">
-          <h3> More </h3>
-
-        <ul>
-
-          <a href="about.html"><li> About Us </li> </a>
-          <a href="citations.html"> <li> Citations </li> </a>
-          <a href="styleguide.html"><li> Styleguide </li> <a>
-
-        </ul>
 
         </div>
 
-        <div class="column3">
-        <h3> Contact Us </h3>
-        <div class="support">
-        <div class="support1">
-        <p><b> email </b> </p>
-        <p> <b> phone </b> </p>
-        </div>
+        <script>
+        function myFunction() {
+          var x = document.getElementById("myNav");
+          if (x.className === "navigation") {
+            x.className += " responsive";
+          } else {
+            x.className = "navigation";
+          }
+        }
+        </script>
 
-        <div class="support1" </div>
-        <p> support@sweetener.com </p>
-        <p> (604)-684-3730 </p>
-        </div>
-        </div>
-        </div>
-        </footer>
+
 
 
 </body>
