--- a/events.html
+++ b/events.html
@@ -15,15 +15,25 @@
 
   <header>
     <img class="search-icon" src="img/search.svg" alt="search icon">
-    <a href="index.html">
     <h1 class="logo">sweetener</h1>
-  </a>
 
-<form action="checkoutV2.html">
-    <button class="cart-icon"> 2 </button>
-</form>
+    <form action="checkoutV2.html">
+        <button class="cart-icon"> 2 </button>
+    </form>
 
 </header>
+
+<div class="navigation" id="myNav">
+  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <i class="fa fa-bars"></i>
+  </a>
+          <a href="home.html">Home</a>
+        <a href="events.html">New</a>
+        <a href="listings.html">Shop all</a>
+        <a href="about.html">About Us</a>
+        <a href="contact.html">Contact</a>
+
+    </div>
 
     <div class="navigation">
           <nav>
@@ -108,9 +118,10 @@
 <p> <b> phone </b> </p>
 </div>
 
-<div class="support1"> </div>
+<div class="support1">
 <p> support@sweetener.com </p>
 <p> (604)-684-3730 </p>
+</div>
 </div>
 </div>
 </div>
